Moved local tile file searching into the Util class, and referenced the new function from the LocalRequesterDelegate and the FileElevationModel
git-svn-id: svn://localhost/Software/Java/WorldWind@1136 4cd5884b-1955-4949-bbec-e4dd67779ed6